Fixes bugs here and there such as spacing issues

--- a/src/components/ThreeCircles/threecircles.module.css
+++ b/src/components/ThreeCircles/threecircles.module.css
@@ -12,19 +12,19 @@
 }
 
 .icon1 {
-  width: 10%;
+  width: 15%;
   padding-top: 10%;
   fill: white !important;
 }
 
 .icon2 {
-  width: 20%;
+  width: 23%;
   padding-top: 10%;
   fill: white !important;
 }
 
 .icon3 {
-  width: 25%;
+  width: 22%;
   padding-top: 10%;
   fill: white !important;
 }
@@ -37,7 +37,7 @@
 }
 
 .subtitle3 {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   padding-bottom: 15%;
   color: white;
   margin-left: 5%;
@@ -54,7 +54,7 @@
 .title3 {
   padding-top: 10%;
   color: white;
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   margin-left: 5%;
   margin-right: 5%;
 }
