--- a/src/components/VisualTextBlocks/visualtextblocks.module.css
+++ b/src/components/VisualTextBlocks/visualtextblocks.module.css
@@ -21,10 +21,19 @@
 .blocktext {
   color: white;
   font-weight: 100;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding-top: 20%;
+}
+
+.blocktextlil {
+  color: white;
+  font-weight: 100;
+  padding-bottom: 20%;
 }
 
 .txtBlockWrapper {
-  height: 400px;
+  height: 500px;
   text-align: center;
   display: flex;
   flex-direction: column;
